Closed #33; renamed option --add-packages